k8s/gateways/app-gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass

metadata:
  name: app-gatewayclass

spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
